Profile button bar alignment bug in firefox fixed by adding clear: both to .wrapper css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@ body {
 	margin: 0 auto;
 	padding: 0;
 	display:block !important;
+	clear: both;
 }
 
 
